# bin2cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: build_version.hpp.in  main.cpp
